Finished Up The Website

--- a/website/index.html
+++ b/website/index.html
@@ -19,24 +19,84 @@
 			<img src="../image/htmlcode.jpg" width="500" height="300" alt="A picture of dummy HTML code." />
 
 			<p>
-				Front End Web Development is one of the easiest programming jobs to break into and learn, as well as one of the most fun! Even though there are still many <br />
-				other avenues to take when learning to code, learning how to build websites and web apps is one of the most practical paths. There are around 8,727 jobs for <br />
-				Front End jobs on <a href="https://www.indeed.com/?from=gnav-homepage">Indeed</a> at the moment. What is the salary for front end developers though? According to sources, it can be around $100,000 per year! So <br />
+				Front End Web Development is one of the <em>easiest</em> programming jobs to break into and learn, as well as one of the most <em>fun</em>! Even though there are still many <br />
+				other avenues to take when learning to code, learning how to build websites and web apps is one of the most practical paths. There are around <strong>8,727 jobs</strong> for <br />
+				Front End jobs on
+				<a href="https://www.indeed.com/?from=gnav-homepage">Indeed</a> at the moment. What is the salary for front end developers though? According to sources, it can be around <strong>$100,000 per year</strong>! So
+				<br />
 				now that we established why Front End is a good path to take, lets go over the 5 main steps!
 			</p>
 		</div>
 		<div id="step1">
 			<h2>Step 1 | Choose A Course</h2>
 			<p>
-				No, I'm not talking about coding bootcamps here or a college course, I'm talking about free online courses. Going self-taught is usually the cheapest and <br />
+				No, I'm not talking about coding bootcamps here or a college course, I'm talking about <em>free online courses</em>. Going self-taught is usually the cheapest and <br />
 				best way for most people. There are many options, for example:
 			</p>
 			<ol>
-				<li><a>Codecademy</a></li>
-				<li><a>Udemy Courses</a> (Most courses are not free.)</li>
-				<li><a>Bro Code On YouTube</a></li>
-				<li><a>W3Schools</a></li>
+				<li>
+					<a href="https://www.codecademy.com" target="_blank">Codecademy</a>
+				</li>
+				<li>
+					<a href="https://www.udemy.com" target="_blank">Udemy Courses</a>
+					(Most courses are not free.)
+				</li>
+				<li>
+					<a href="https://www.youtube.com/@BroCodez" target="_blank">Bro Code On YouTube</a>
+					(Really cool guy.)
+				</li>
+				<li>
+					<a href="https://www.w3schools.com" target="_blank">W3Schools</a>
+				</li>
 			</ol>
+			<p>These are just a few recourses that I recommend.</p>
+		</div>
+		<div id="step2">
+			<h2>Step 2 | Practice, Practice, Project!</h2>
+			<p>
+				Literally the only way to learn programming is to <em>practice by playing around with the code and making projects</em>. <br />
+				If you don't do this, you won't really learn anything in the long term. Usually courses have projects that you do, but if not, or if they don't seem intresting, build <br />
+				your own websites! Remember, if you barely have HTML knowledge, don't create the next YouTube web app. Create something simple. Build according to your <br />
+				knowledge level. And remember, the point of these projects is to <strong>learn</strong>, so challenge yourself a little bit and try to learn how to better build what your trying to build.
+			</p>
+		</div>
+		<div id="step3">
+			<h2>Step 3 | Portfolio Projects</h2>
+			<p>
+				Well, how do you think people will hire you if you only make basic for fun websites? You need to start creating <em>portfolio projects.</em><br />
+				How do you do this? Well, at this point you should have knowledge of good semantic HTML and enough CSS that you can make basic kinda "good" looking sites <br />
+				that are responsive. Finally you should know basic JavaScript and enough knowledge of it you can apply JavaScript in your own projects in a practical way. <br />
+				So, first you need to come up with a website idea that is more than just a simple blog or a todo app. You need to create something that <em>actually matters</em>. <br />
+				This can be something simple like a mock-up of a Hotel Service site or a functional weather web app. Maybe after a few of these you can create your own original functional website. <br />
+			</p>
+			<p>
+				What is this website? Well it can be website to learn about how the YouTube algorithim works or a guide to learn Front End Development! Either way, the website should be planned <br />
+				and built like its an actual website for a client.
+			</p>
+		</div>
+		<div>
+			<h2>Step 4 | Learn A Framework</h2>
+			<p>You need to start learning a framework like <strong>Vue, Angular, or React</strong>. Find which one best suits you and which one is used more in front end jobs. Master that framework and practice it.</p>
+
+			<img src="../image/h3lasxfs.png" height="500" alt="A image that shows an image says Angular vs React vs Vue by using their respective icons" />
+		</div>
+		<div>
+			<h2>Step 5 | Create Your Portfolio</h2>
+			<p>
+				Here you go. Use <em>everything you have learned</em> including the framework you mastered and create your portfolio website that includes all your social links (that means your GitHub and any sites like that), <br />
+				your portfolio projects, and your story and who you are. Take as much time as you need to really put your all into making it. Do your best and make sure that you treat it like its your child, because this <br />
+				really will make or break some interviews. Make sure that you also understand how to design your portfolio UI before making it. Remember to plan it out before building it and also make a mock-up in something like <a href="https://www.canva.com" target="_blank">Canva</a>. <br />
+			</p>
+		</div>
+		<div>
+			<h2>Conclusion</h2>
+			<p>
+				From here it is your own path that you must take. Maybe you no longer want to work for a company, maybe you want to do freelancing instead. Or maybe you want to try to learn more things before applying for jobs. <br />
+				<strong>Whatever you do next, don't give up.</strong>
+			</p>
+		</div>
+		<div>
+			<p>Thank you for reading, this was just a fun project to practice basic HTML :)</p>
 		</div>
 	</body>
 </html>
