Fixed The Navigation Part With Real Links

--- a/website/index.html
+++ b/website/index.html
@@ -9,10 +9,11 @@
 		<nav>
 			<li><a href="#intro">Introduction</a></li>
 			<li><a href="#step1">Step 1</a></li>
-			<li>Step 2</li>
-			<li>Step 3</li>
-			<li>Step 4</li>
-			<li>Step 5</li>
+			<li><a href="#step2">Step 2</a></li>
+			<li><a href="#step3">Step 3</a></li></li>
+			<li><a href="#step4">Step 4</a></li>
+			<li><a href="#step5">Step 5</a></li>
+			<li><a href="#conclusion">Conclusion</a></li>
 		</nav>
 		<div id="intro">
 			<h1>The Five Step Guide To Web Development</h1>
@@ -74,13 +75,13 @@
 				and built like its an actual website for a client.
 			</p>
 		</div>
-		<div>
+		<div id="step4">
 			<h2>Step 4 | Learn A Framework</h2>
 			<p>You need to start learning a framework like <strong>Vue, Angular, or React</strong>. Find which one best suits you and which one is used more in front end jobs. Master that framework and practice it.</p>
 
 			<img src="../image/h3lasxfs.png" height="500" alt="A image that shows an image says Angular vs React vs Vue by using their respective icons" />
 		</div>
-		<div>
+		<div id="step5">
 			<h2>Step 5 | Create Your Portfolio</h2>
 			<p>
 				Here you go. Use <em>everything you have learned</em> including the framework you mastered and create your portfolio website that includes all your social links (that means your GitHub and any sites like that), <br />
@@ -88,7 +89,7 @@
 				really will make or break some interviews. Make sure that you also understand how to design your portfolio UI before making it. Remember to plan it out before building it and also make a mock-up in something like <a href="https://www.canva.com" target="_blank">Canva</a>. <br />
 			</p>
 		</div>
-		<div>
+		<div id="conclusion">
 			<h2>Conclusion</h2>
 			<p>
 				From here it is your own path that you must take. Maybe you no longer want to work for a company, maybe you want to do freelancing instead. Or maybe you want to try to learn more things before applying for jobs. <br />
