Fixed some list bugs and edited the formatting

--- a/website/index.html
+++ b/website/index.html
@@ -10,7 +10,7 @@
 			<li><a href="#intro">Introduction</a></li>
 			<li><a href="#step1">Step 1</a></li>
 			<li><a href="#step2">Step 2</a></li>
-			<li><a href="#step3">Step 3</a></li></li>
+			<li><a href="#step3">Step 3</a></li>
 			<li><a href="#step4">Step 4</a></li>
 			<li><a href="#step5">Step 5</a></li>
 			<li><a href="#conclusion">Conclusion</a></li>
@@ -18,7 +18,6 @@
 		<div id="intro">
 			<h1>The Five Step Guide To Web Development</h1>
 			<img src="../image/htmlcode.jpg" width="500" height="300" alt="A picture of dummy HTML code." />
-
 			<p>
 				Front End Web Development is one of the <em>easiest</em> programming jobs to break into and learn, as well as one of the most <em>fun</em>! Even though there are still many <br />
 				other avenues to take when learning to code, learning how to build websites and web apps is one of the most practical paths. There are around <strong>8,727 jobs</strong> for <br />
@@ -78,7 +77,6 @@
 		<div id="step4">
 			<h2>Step 4 | Learn A Framework</h2>
 			<p>You need to start learning a framework like <strong>Vue, Angular, or React</strong>. Find which one best suits you and which one is used more in front end jobs. Master that framework and practice it.</p>
-
 			<img src="../image/h3lasxfs.png" height="500" alt="A image that shows an image says Angular vs React vs Vue by using their respective icons" />
 		</div>
 		<div id="step5">
